[tool.poetry]
name = "agopengps-phidgets-steering"
version = "0.1.0"
description = ""
authors = ["Tom Stein <dev@tomstein.me>"]
readme = "README.md"
packages = [{include = "agopengps_phidgets_steering"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
phidget22 = "^1.12"
pyside6 = "^6.4.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
